# device-stat

./: README.md  docker-compose.yml  locustfile.py  pyproject.toml
app/: celery_worker.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/api/: __init__.py  analysis.py  devices.py  users.py
app/services/: aggregation.py  analysis.py
docker/: Dockerfile
tasks/: analytics.py
test/: conftest.py  test_api.py
